--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,4 +19,4 @@ jobs:
         run: |
           echo ${{ github.ref }}
           echo $GITHUB_REF
-        
+          echo ${GITHUB_REF/refs\/tags\//}
