--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,15 +19,11 @@ jobs:
         run: |
           echo "PROJECT_NAME=$(basename ${{ github.repository }})" >> $GITHUB_ENV
           echo "TAG_NAME=$(basename ${{ github.ref }})" >> $GITHUB_ENV
-          echo "BRANCH_NAME=${{ github.head_ref || github.ref_name }}" >> $GITHUB_ENV
+          echo "BRANCH_NAME=$(git branch --show-current)" >> $GITHUB_ENV
 
       - name: Display environment variables
         run: |
           echo "Project Name: $PROJECT_NAME"
           echo "Tag Name: $TAG_NAME"
           echo "Branch Name: $BRANCH_NAME"
-
-          echo "Full GitHub Ref: $GITHUB_REF"
-          echo "Environment Variables: $GITHUB_ENV"
-          echo "Environment Variables: $GITHUB_REF_NAME"
           
