--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,7 @@ jobs:
         run: |
           echo "PROJECT_NAME=$(basename ${{ github.repository }})" >> $GITHUB_ENV
           echo "TAG_NAME=$(basename ${{ github.ref }})" >> $GITHUB_ENV
-          echo "RELEASE_NAME=$PROJECT_NAME-$TAG_NAME" >> $GITHUB_ENV
+          echo "RELEASE_NAME=$(basename ${{ github.repository }})-$(basename ${{ github.ref }})" >> $GITHUB_ENV
 
       - name: Display environment variables
         run: |
@@ -36,7 +36,7 @@ jobs:
         run: |
           zip -r $RELEASE_NAME.zip temp/*
 
-      - name: Upload Release Artifact
+      - name: Upload Release assets
         uses: softprops/action-gh-release@v2
         with:
             files: |
